--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -13,14 +13,34 @@
         android:id="@+id/etEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="@string/name" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etEdit"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:text="Priority" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/textView2"
+        android:layout_marginBottom="10dp"
+        android:entries="@array/entries" />
 
     <Button
         android:id="@+id/btnEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/etEdit"
-        android:text="Edit" />
+        android:layout_below="@id/spinner"
+        android:background="#03A9F4"
+        android:text="@string/edit"
+        android:textColor="@android:color/white" />
 </RelativeLayout>
