--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,31 +11,51 @@
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/rl" />
+        android:layout_above="@id/rl"
+        android:background="#EEF2F5" />
 
     <RelativeLayout
         android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"
         android:padding="5dp">
+
+        <ImageView
+            android:id="@+id/priority"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/prioritybtn"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            app:srcCompat="@drawable/ic_bookmark_black_24dp" />
 
         <EditText
             android:id="@+id/etAddItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/btnAdd"
+            android:layout_alignParentStart="false"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:layout_toStartOf="@id/btnAdd"
+            android:layout_toEndOf="@id/priority"
+            android:background="@android:color/white"
             android:ems="10"
-            android:hint="Add task"
-            android:inputType="textPersonName" />
+            android:hint="@string/what_do_we_have_to_do"
+            android:inputType="textPersonName"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp" />
 
         <Button
             android:id="@+id/btnAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="@string/add_item" />
+            android:layout_alignParentEnd="true"
+            android:background="#FFFFFF"
+            android:text="@string/add_item"
+            android:textColor="#03A9F4" />
 
     </RelativeLayout>
 
